# fluid-sim

./: CMakeLists.txt  README.md
include/: cuda_kernels.h  particle_system.h  shader.h
shaders/: particle.frag  particle.vert
src/: cuda_kernels.cu  main.cpp  particle_system.cpp
